Внесенно несколько разделов
Внесенны Особенности, Сем занимаемся, Наша коанда (не завершенно).

--- a/index.html
+++ b/index.html
@@ -9,33 +9,66 @@
 
 <body>
     <div>
-        <h1>WebStudio</h1>
-        <h1>Студия</h1>
-        <h1>Портфолио</h1>
-        <h1>Контакты</h1>
+        <h1>WebStudio Студия Портфолио Контакты</h1>
+        <!-- <h1>Студия</h1> -->
+        <!-- <h1>Портфолио</h1> -->
+        <!-- <h1>Контакты</h1> -->
         <h1> <a href="info@devstudio.com">info@devstudio.com</a> </h1>
         <h1>+38 096 111 11 11</h1>
+    </div>
 
-        ЭФФУКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА
+    <div>
+        <h1>ЭФФtКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
 
-        Заказать услугу
+        <h2>Заказать услугу</h2>
+    </div>
 
-        ВНИМАНИЕ К ДЕТАЛЯМ
-        Идейные соображения, а также начало повседневной работы по формированию позиции.
+    <!-- ОСОБЕННОСТИ -->
+    <div>
+        <div>
+            <!-- ОСОБЕННОСТИ Feature 1 -->
+            <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+            <span>Идейные соображения, а также начало повседневной работы по формированию позиции.</span>
+        </div>
 
-        ПУНКТУАЛЬНОСТЬ
-        Задача организации, в особенности же рамки и место обучения кадров влечет засобой.
+        <div>
+            <!-- ОСОБЕННОСТИ Feature 2 -->
+            <h3>ПУНКТУАЛЬНОСТЬ</h3>
+            <span>Задача организации, в особенности же рамки и место обучения кадров влечет засобой.</span>
+        </div>
 
-        ПЛАНИРОВАНИЕ
-        Равным образом консультация с широким активом в значительной степени обуславливает.
+        <div>
+            <!-- ОСОБЕННОСТИ Feature 3 -->
+            <h3>ПЛАНИРОВАНИЕ</h3>
+            <span>Равным образом консультация с широким активом в значительной степени обуславливает.</span>
+        </div>
 
-        СОВРЕМЕННЫЕ ТЕХНОЛОГИИ
-        Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+        <div>
+            <!-- ОСОБЕННОСТИ Feature 4 -->
+            <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+            <span>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</span>
+        </div>
+    </div>
+
+    <!-- ЧЕМ МЫ ЗАНИМАЕМСЯ -->
+    <div>
+        <h2>Чем мы занимаемся</h2>
+        <img src=".images/box-1.jpg" alt="box-1">
+        <img src=".images/box-2.jpg" alt="box-2">
+        <img src=".images/box-3.jpg" alt="box-3">
 
 
 
 
+    </div>
 
+    <!-- НАША КОМАНДА -->
+    <div>
+        <h2>Наша команда</h2>
+        <img src=".images/team-card-1-ID.jpg" alt="Игорь Демьяненко">
+        <img src=".images/team-card-2-OR.jpg" alt="Ольга Репина">
+        <img src=".images/team-card-3-NT.jpg" alt="Николай Тарасов">
+        <img src=".images/team-card-4-ME.jpg" alt="Михаил Ермаков">
     </div>
 </body>
 
