Изменения в работе с папкой images
Убрана точка в названии images, и прописан путь к фото как ./images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document цу</title>
 </head>
 
 <body>
@@ -53,9 +53,9 @@
     <!-- ЧЕМ МЫ ЗАНИМАЕМСЯ -->
     <div>
         <h2>Чем мы занимаемся</h2>
-        <img src=".images/box-1.jpg" alt="box-1">
-        <img src=".images/box-2.jpg" alt="box-2">
-        <img src=".images/box-3.jpg" alt="box-3">
+        <img src="./images/box-1.jpg" alt="box-1">
+        <img src="./images/box-2.jpg" alt="box-2">
+        <img src="./images/box-3.jpg" alt="box-3">
 
 
 
@@ -65,10 +65,9 @@
     <!-- НАША КОМАНДА -->
     <div>
         <h2>Наша команда</h2>
-        <img src=".images/team-card-1-ID.jpg" alt="Игорь Демьяненко">
-        <img src=".images/team-card-2-OR.jpg" alt="Ольга Репина">
-        <img src=".images/team-card-3-NT.jpg" alt="Николай Тарасов">
-        <img src=".images/team-card-4-ME.jpg" alt="Михаил Ермаков">
+        <img src="./images/team-card-2-OR.jpg" alt="Ольга Репина">
+        <img src="./images/team-card-3-NT.jpg" alt="Николай Тарасов">
+        <img src="./images/team-card-4-ME.jpg" alt="Михаил Ермаков">
     </div>
 </body>
 
