--- a/index.html
+++ b/index.html
@@ -4,71 +4,124 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document цу</title>
+    <title>WebStudio</title>
 </head>
 
 <body>
-    <div>
-        <h1>WebStudio Студия Портфолио Контакты</h1>
-        <!-- <h1>Студия</h1> -->
-        <!-- <h1>Портфолио</h1> -->
-        <!-- <h1>Контакты</h1> -->
-        <h1> <a href="info@devstudio.com">info@devstudio.com</a> </h1>
-        <h1>+38 096 111 11 11</h1>
-    </div>
+    <!-- Вверхняя линия -->
 
-    <div>
-        <h1>ЭФФtКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+    <header>
+        <nav>
+            <a href="./index.html">
+                <img src="./images/web-studio.jpg" alt="Логотип компании" />
+            </a>
+            <ul>
+                <li>WebStudio</li>
+                <li>Студия</li>
+                <li>Портфолио</li>
+                <li>Контакты</li>
+            </ul>
 
-        <h2>Заказать услугу</h2>
-    </div>
+            <ul>
+                <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+                <li>+38 096 111 11 11</li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Шапка сайта -->
+
+    <section>
+        <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+        <button type="button">Заказать услугу</button>
+        <!-- <h2>Заказать услугу</h2> -->
+    </section>
 
     <!-- ОСОБЕННОСТИ -->
-    <div>
-        <div>
-            <!-- ОСОБЕННОСТИ Feature 1 -->
-            <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-            <span>Идейные соображения, а также начало повседневной работы по формированию позиции.</span>
-        </div>
+    <section>
+        <ul>
+            <li>
+                <!-- ОСОБЕННОСТИ Feature 1 -->
+                <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+                <span>Идейные соображения, а также начало повседневной работы по формированию позиции.</span>
+            </li>
 
-        <div>
-            <!-- ОСОБЕННОСТИ Feature 2 -->
-            <h3>ПУНКТУАЛЬНОСТЬ</h3>
-            <span>Задача организации, в особенности же рамки и место обучения кадров влечет засобой.</span>
-        </div>
+            <li>
+                <!-- ОСОБЕННОСТИ Feature 2 -->
+                <h3>ПУНКТУАЛЬНОСТЬ</h3>
+                <span>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</span>
+            </li>
 
-        <div>
-            <!-- ОСОБЕННОСТИ Feature 3 -->
-            <h3>ПЛАНИРОВАНИЕ</h3>
-            <span>Равным образом консультация с широким активом в значительной степени обуславливает.</span>
-        </div>
+            <li>
+                <!-- ОСОБЕННОСТИ Feature 3 -->
+                <h3>ПЛАНИРОВАНИЕ</h3>
+                <span>Равным образом консультация с широким активом в значительной степени обуславливает.</span>
+            </li>
 
-        <div>
-            <!-- ОСОБЕННОСТИ Feature 4 -->
-            <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-            <span>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</span>
-        </div>
-    </div>
+            <li>
+                <!-- ОСОБЕННОСТИ Feature 4 -->
+                <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                <span>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</span>
+            </li>
+        </ul>
+
+    </section>
 
     <!-- ЧЕМ МЫ ЗАНИМАЕМСЯ -->
-    <div>
+    <section>
         <h2>Чем мы занимаемся</h2>
         <img src="./images/box-1.jpg" alt="box-1">
         <img src="./images/box-2.jpg" alt="box-2">
         <img src="./images/box-3.jpg" alt="box-3">
 
-
-
-
-    </div>
+    </section>
 
     <!-- НАША КОМАНДА -->
-    <div>
+    <section>
         <h2>Наша команда</h2>
-        <img src="./images/team-card-2-OR.jpg" alt="Ольга Репина">
-        <img src="./images/team-card-3-NT.jpg" alt="Николай Тарасов">
-        <img src="./images/team-card-4-ME.jpg" alt="Михаил Ермаков">
-    </div>
+        <section>
+            <ul>
+                <li>
+                    <img src="./images/team-card-1-ID.jpg" alt="Игорь Демьяненко" width="400">
+                    <h3>Игорь Демьяненко</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/team-card-2-OR.jpg" alt="Ольга Репина" width="400">
+                    <h3>Ольга Репина</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/team-card-3-NT.jpg" alt="Николай Тарасов" width="400">
+                    <h3>Николай Тарасов</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/team-card-4-ME.jpg" alt="Михаил Ермаков" width="400">
+                    <h3>Михаил Ермаков</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+
+
+    </section>
+
+    <!-- Подвал -->
+    <footer>
+        <ul>
+            <li>
+                <a href="./index.html">
+                    <img src="./images/web-studio.jpg" alt="Логотип компании" />
+                </a>
+            </li>
+            <li>
+                <h3>г. Киев, пр-т Леси Украинки, 26</h3>
+            </li>
+            <li>info@example.com</li>
+            <li>+38 099 111 11 11</li>
+        </ul>
+    </footer>
 </body>
 
 </html>
