Изменения в верхней линии
Добавлена ссылка для Студия, и внесено логотип в маркированный список верхней линии.

--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
 </head>
 
 <body>
-    <!-- Вверхняя линия -->
+    <!-- Верхняя линия -->
 
     <header>
         <nav>
-            <a href="./index.html">
-                <img src="./images/web-studio.jpg" alt="Логотип компании" />
-            </a>
+
             <ul>
-                <li>WebStudio</li>
-                <li>Студия</li>
+                <li>
+                    <a href="./index.html">
+                        <img src="./images/web-studio.jpg" alt="Логотип компании" />
+                    </a>
+                </li>
+                <!-- <li>WebStudio</li> -->
+                <li><a href="./index.html">Студия</a></li>
                 <li>Портфолио</li>
                 <li>Контакты</li>
             </ul>
