--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
     <header>
         <nav>
 
+            <a href="./index.html">
+                <img src="./images/web-studio.jpg" alt="Логотип компании WebStudio" />
+            </a>
+
             <ul>
-                <li>
-                    <a href="./index.html">
-                        <img src="./images/web-studio.jpg" alt="Логотип компании" />
-                    </a>
-                </li>
-                <!-- <li>WebStudio</li> -->
-                <li><a href="./index.html">Студия</a></li>
-                <li>Портфолио</li>
-                <li>Контакты</li>
+                <li><a href="/">Студия</a></li>
+                <li><a href="/">Портфолио</a></li>
+                <li><a href="/">Контакты</a></li>
+                <li><a href="/">About</a></li>
             </ul>
 
             <ul>
@@ -32,84 +31,95 @@
         </nav>
     </header>
 
-    <!-- Шапка сайта -->
+    <main>
+        <!-- Шапка сайта -->
 
-    <section>
-        <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-        <button type="button">Заказать услугу</button>
-        <!-- <h2>Заказать услугу</h2> -->
-    </section>
-
-    <!-- ОСОБЕННОСТИ -->
-    <section>
-        <ul>
-            <li>
-                <!-- ОСОБЕННОСТИ Feature 1 -->
-                <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-                <span>Идейные соображения, а также начало повседневной работы по формированию позиции.</span>
-            </li>
-
-            <li>
-                <!-- ОСОБЕННОСТИ Feature 2 -->
-                <h3>ПУНКТУАЛЬНОСТЬ</h3>
-                <span>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</span>
-            </li>
-
-            <li>
-                <!-- ОСОБЕННОСТИ Feature 3 -->
-                <h3>ПЛАНИРОВАНИЕ</h3>
-                <span>Равным образом консультация с широким активом в значительной степени обуславливает.</span>
-            </li>
-
-            <li>
-                <!-- ОСОБЕННОСТИ Feature 4 -->
-                <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-                <span>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</span>
-            </li>
-        </ul>
-
-    </section>
-
-    <!-- ЧЕМ МЫ ЗАНИМАЕМСЯ -->
-    <section>
-        <h2>Чем мы занимаемся</h2>
-        <img src="./images/box-1.jpg" alt="box-1">
-        <img src="./images/box-2.jpg" alt="box-2">
-        <img src="./images/box-3.jpg" alt="box-3">
-
-    </section>
-
-    <!-- НАША КОМАНДА -->
-    <section>
-        <h2>Наша команда</h2>
         <section>
-            <ul>
-                <li>
-                    <img src="./images/team-card-1-ID.jpg" alt="Игорь Демьяненко" width="400">
-                    <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
-                </li>
-                <li>
-                    <img src="./images/team-card-2-OR.jpg" alt="Ольга Репина" width="400">
-                    <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./images/team-card-3-NT.jpg" alt="Николай Тарасов" width="400">
-                    <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/team-card-4-ME.jpg" alt="Михаил Ермаков" width="400">
-                    <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
-                </li>
-            </ul>
+            <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+            <button type="button">Заказать услугу</button>
         </section>
 
+        <div>
+            <!-- ОСОБЕННОСТИ -->
+            <section>
+                <ul>
+                    <li>
+                        <!-- ОСОБЕННОСТИ Feature 1 -->
+                        <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </li>
 
-    </section>
+                    <li>
+                        <!-- ОСОБЕННОСТИ Feature 2 -->
+                        <h3>ПУНКТУАЛЬНОСТЬ</h3>
+                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    </li>
 
+                    <li>
+                        <!-- ОСОБЕННОСТИ Feature 3 -->
+                        <h3>ПЛАНИРОВАНИЕ</h3>
+                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </li>
+
+                    <li>
+                        <!-- ОСОБЕННОСТИ Feature 4 -->
+                        <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    </li>
+                </ul>
+            </section>
+
+            <!-- ЧЕМ МЫ ЗАНИМАЕМСЯ -->
+            <section>
+                <h2>Чем мы занимаемся</h2>
+                <ul>
+                    <li><img src="./images/box-1.jpg" alt="box-1"></li>
+                    <li><img src="./images/box-2.jpg" alt="box-2"></li>
+                    <li><img src="./images/box-3.jpg" alt="box-3"></li>
+                </ul>
+            </section>
+
+        </div>
+        <!-- НАША КОМАНДА -->
+        <section>
+            <h2>Наша команда</h2>
+            <section>
+                <ul>
+                    <li>
+                        <figure>
+                            <img src="./images/team-card-1-ID.jpg" alt="Игорь Демьяненко" width="400">
+                            <h3>Игорь Демьяненко</h3>
+                            <p lang="en">Product Designer</p>
+                        </figure>
+
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./images/team-card-2-OR.jpg" alt="Ольга Репина" width="400">
+                            <h3>Ольга Репина</h3>
+                            <p lang="en">Frontend Developer</p>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./images/team-card-3-NT.jpg" alt="Николай Тарасов" width="400">
+                            <h3>Николай Тарасов</h3>
+                            <p lang="en">Marketing</p>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./images/team-card-4-ME.jpg" alt="Михаил Ермаков" width="400">
+                            <h3>Михаил Ермаков</h3>
+                            <p lang="en">UI Designer</p>
+                        </figure>
+                    </li>
+                </ul>
+            </section>
+
+
+        </section>
+    </main>
     <!-- Подвал -->
     <footer>
         <ul>
@@ -119,10 +129,12 @@
                 </a>
             </li>
             <li>
-                <h3>г. Киев, пр-т Леси Украинки, 26</h3>
+                <address>
+                    <h3>г. Киев, пр-т Леси Украинки, 26</h3>
+                </address>
             </li>
-            <li>info@example.com</li>
-            <li>+38 099 111 11 11</li>
+            <li><a href="mailto:info@example.com">info@example.com</a> </li>
+            <li><a href="tel:+380991111111">+38 099 111 11 11</a> </li>
         </ul>
     </footer>
 </body>
