--- a/index.html
+++ b/index.html
@@ -11,17 +11,25 @@
     <!-- Верхняя линия -->
 
     <header>
-        <nav>
 
-            <a href="./index.html">
-                <img src="./images/web-studio.jpg" alt="Логотип компании WebStudio" />
+        <nav>
+            <a href="/">
+                <span lang="en">WebStudio</span>
             </a>
 
             <ul>
-                <li><a href="/">Студия</a></li>
-                <li><a href="/">Портфолио</a></li>
-                <li><a href="/">Контакты</a></li>
-                <li><a href="/">About</a></li>
+                <li>
+                    <a href="/"> <span>Студия</span> </a>
+                </li>
+                <li>
+                    <a href="/"> <span>Портфолио</span> </a>
+                </li>
+                <li>
+                    <a href="/"> <span>Контакты</span> </a>
+                </li>
+                <li>
+                    <a href="/"> <span>About</span> </a>
+                </li>
             </ul>
 
             <ul>
@@ -29,6 +37,7 @@
                 <li> <a href="tel:+380991111111">+38 096 111 11 11</a> </li>
             </ul>
         </nav>
+
     </header>
 
     <main>
@@ -36,9 +45,10 @@
 
         <section>
             <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-            <button type="button">Заказать услугу</button>
+            <button type="button"> <span>Заказать услугу</span> </button>
         </section>
 
+        <!-- Контейнер объединяющий "Особенности" и "Чем мы занимаемся" -->
         <div>
             <!-- ОСОБЕННОСТИ -->
             <section>
@@ -46,25 +56,35 @@
                     <li>
                         <!-- ОСОБЕННОСТИ Feature 1 -->
                         <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                        <p>
+                            Идейные соображения, а также<br />начало повседневной работы по<br /> формированию позиции.
+                        </p>
                     </li>
 
                     <li>
                         <!-- ОСОБЕННОСТИ Feature 2 -->
                         <h3>ПУНКТУАЛЬНОСТЬ</h3>
-                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                        <p>
+                            Задача организации, в особенности же<br />рамки и место обучения кадров<br />влечет за
+                            собой.
+                        </p>
                     </li>
 
                     <li>
                         <!-- ОСОБЕННОСТИ Feature 3 -->
                         <h3>ПЛАНИРОВАНИЕ</h3>
-                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                        <p>
+                            Равным образом консультация с<br />широким активом в значительной<br />степени
+                            обуславливает.
+                        </p>
                     </li>
 
                     <li>
                         <!-- ОСОБЕННОСТИ Feature 4 -->
                         <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                        <p>
+                            Значимость этих проблем настолько<br />очевидна, что реализация плановых<br />заданий.
+                        </p>
                     </li>
                 </ul>
             </section>
@@ -80,61 +100,69 @@
             </section>
 
         </div>
+
         <!-- НАША КОМАНДА -->
+
         <section>
             <h2>Наша команда</h2>
-            <section>
-                <ul>
-                    <li>
-                        <figure>
-                            <img src="./images/team-card-1-ID.jpg" alt="Игорь Демьяненко" width="400">
+            <ul>
+                <li>
+                    <figure>
+                        <img src="./images/team-card-1-ID.jpg" alt="Игорь Демьяненко" width="400">
+                        <figcaption>
                             <h3>Игорь Демьяненко</h3>
                             <p lang="en">Product Designer</p>
-                        </figure>
+                        </figcaption>
+                    </figure>
 
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="./images/team-card-2-OR.jpg" alt="Ольга Репина" width="400">
+                </li>
+                <li>
+                    <figure>
+                        <img src="./images/team-card-2-OR.jpg" alt="Ольга Репина" width="400">
+                        <figcaption>
                             <h3>Ольга Репина</h3>
                             <p lang="en">Frontend Developer</p>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="./images/team-card-3-NT.jpg" alt="Николай Тарасов" width="400">
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="./images/team-card-3-NT.jpg" alt="Николай Тарасов" width="400">
+                        <figcaption>
                             <h3>Николай Тарасов</h3>
                             <p lang="en">Marketing</p>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="./images/team-card-4-ME.jpg" alt="Михаил Ермаков" width="400">
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="./images/team-card-4-ME.jpg" alt="Михаил Ермаков" width="400">
+                        <figcaption>
                             <h3>Михаил Ермаков</h3>
                             <p lang="en">UI Designer</p>
-                        </figure>
-                    </li>
-                </ul>
-            </section>
-
-
+                        </figcaption>
+                    </figure>
+                </li>
+            </ul>
         </section>
+
     </main>
+
     <!-- Подвал -->
     <footer>
         <ul>
             <li>
-                <a href="./index.html">
-                    <img src="./images/web-studio.jpg" alt="Логотип компании" />
+                <a href="/">
+                    <span>WebStudio</span>
                 </a>
             </li>
             <li>
                 <address>
-                    <h3>г. Киев, пр-т Леси Украинки, 26</h3>
+                    <span>г. Киев, пр-т Леси Украинки, 26</span>
                 </address>
             </li>
-            <li><a href="mailto:info@example.com">info@example.com</a> </li>
-            <li><a href="tel:+380991111111">+38 099 111 11 11</a> </li>
+            <li> <a href="mailto:info@example.com">info@example.com</a> </li>
+            <li> <a href="tel:+380991111111">+38 099 111 11 11</a> </li>
         </ul>
     </footer>
 </body>
